@@ -1,3 +1,10 @@
+2006-04-27  Fabio Marzocca  <thesaltydog@gmail.com>
+
+	* C/baobab.xml:
+	* C/figures/baobab_prefs.png:
+
+	Still drafting the help file
+
 2006-04-26  Fabio Marzocca  <thesaltydog@gmail.com>
 
 	* C/baobab.xml:
